wip: completeness mechanized filled in; dynamic extension truth preservation and motivation.

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -40,6 +40,9 @@
 	 	\bibitem{MHE} Basin, D., Radomirovic, S. and Schmid, L., Modeling Human Errors in Security Protocols.
 	 	\bibitem{ButlerModeConfusion} Butler, R.W., Miller, S.P., Potts, J.N. and Carreno, V.A., 1998. A formal methods approach to the analysis of mode confusion. In Digital Avionics Systems Conference, 1998. Proceedings., 17th DASC. The AIAA/IEEE/SAE (Vol. 1, pp. C41-1). IEEE.
 	 	
+	 	\bibitem{Hoare}
+	 	Hoare, C. A. R. "An axiomatic basis for computer programming." \emph{Communications of the ACM} 12 (10): 576-583. (1969).
+	 	
 	 	\bibitem{johnson_butler_fm}
 	 	Butler, R.; Johnson, S. Formal Methods For Life-Critical Software. \emph{Computing in Aerospace 9 Conference}, (pp. 319-329), San Diego, CA. October 1993.
 	 	
