--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -433,7 +433,7 @@ This section describes the Coq Proof Assistant \cite{coq_ref} and the Z3 Theorem
 
 The Coq Proof Assistant is a combination of a dependently-typed functional programming language and a language of tactics for partially automating proof verification. Coq supports compilation to Haskell and OCaml, which is convenient because one can write a program and verify its correctness in Coq, then compile the code to a nicer implementation language. This dissertation does not take advantage of that feature. Instead, we embed \DASL\ in Coq and use it as a proof checker that allows us to write recursive functions and proof-automating tactics. This represents a second use case of formal verification tools that one does not often see in the philosophy, mathematics, or logic departments of academia. Coq becomes a tool for us to use to increase the rigor of our research. Many who have ventured into the realm of mechanical theorem proving have been surprised initially by how complicated proofs `by routine induction' can become once all of the details must be spelled out.
 
-We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning engines, including simplex, rewriting, DPLL, superposition, Euclidean solver, and others.\footnote{Presentation by Dr. Leonardo DeMoura, ``From Z3 to Lean: Efficient Verification} We use it to validate that one can encode an instrument reading configuration and a safety precondition for an input action, and automatically detect whether the safety precondition is satisfied by the instrument readings. This validates an important requirement for implementing tools based on \DASL. 
+We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning engines, including simplex, rewriting, DPLL, superposition, Euclidean solver, and others.\footnote{Presentation by Dr. Leonardo DeMoura, ``From Z3 to Lean: Efficient Verification." } We use it to validate that one can encode an instrument reading configuration and a safety precondition for an input action, and automatically detect whether the safety precondition is satisfied by the instrument readings. This validates an important requirement for implementing tools based on \DASL. Thus, rather than using Z3 to verify correctness properties of a prototype, we use it as an inference engine that demonstrates real time inference of safety-critical information from unsafe input actions.
 
 %The field of formal methods grew out of attempts to verify the correctness of hardware and software. It was normally confined to systems deemed mission- or safety-critical, due to its high cost. Arguments for the use of formal methods normally involve an anecdote in which a system fails due to some sort of error missed by traditional testing methods but that would have been caught and prevented were formal methods used.
 
