--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -211,11 +211,11 @@
 \newcommand{\safe} {\mathit{safe}}
 \newcommand{\choice}[1]{\mathit{Choice_{#1}}}
 \newcommand{\neXt}{\mathit{X}}
-\newcommand{\Pal}[1]{\mathbf{[#1]}}
-\newcommand{\PalPos}[1]{\mathbf{\langle#1\rangle}}
-\newcommand{\SPal}[1]{\mathbf{[#1]^\mathcal{S}}}
+\newcommand{\Pal}[1]{\mathbf{[#1]}_i}
+\newcommand{\PalPos}[1]{\mathbf{\langle#1\rangle}_i}
+\newcommand{\SPal}[1]{\mathbf{[#1]_{\mathit{i}}^\mathcal{S}}}
 %	\stackrel{\mathbf{safe}}{\mathbf{[#1,#2]}}}
-\newcommand{\SPalPos}[1]{\mathbf{\langle#1\rangle^\mathcal{S}}}
+\newcommand{\SPalPos}[1]{\mathbf{\langle#1\rangle_{\mathit{i}}^\mathcal{S}}}
 
 \def\firstcircle{(90:1.75cm) circle (2.5cm)}
 \def\secondcircle{(210:1.75cm) circle (2.5cm)}
