inevitability and min rat explanations

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -1325,4 +1325,4 @@ $\PalPos{A,\laa}\varphi \iimplies \Bels{i}\SPalPos{A,\laa}\varphi$ & Minimum Rat
 
 The axiom schema for \emph{Inevitability} states that if engaging in action $\laa$ from action structure $A$ guarantees that $\varphi$ is true as a result, then safely engaging in that action also guarantees that $\varphi$ will result. One way to think about this is that the postcondition of a mere action is the same function as the postcondition for a safe action. The converse of \emph{Inevitability} does not hold, however, because $\pre$ is defined on a subset of worlds on which $\pre_s$ is defined for a given action, representing the notion that it is \emph{easier} to merely engage in an action than to do so safely. The subset relation here represents number of constraints. Thus there may be worlds on which the safety precondition for an action is undefined but on which the precondition is defined. When the safety precondition is undefined it is trivially true that engaging in the action safely guarantees $\varphi$, for all $\varphi$. However, $\varphi$ may not be guaranteed given mere engagement in the action.
 
-The axiom schema for \emph{Minimum Rationality} states that if after engaging in $\laa$ $\varphi$ results, then $i$ believes that after safely engaging in $\laa$ $\varphi$ results. It is more intuitive when the implication is read as an ``only if".
+The axiom schema for \emph{Minimum Rationality} states that if after engaging in $\laa$ $\varphi$ results, then $i$ believes that after safely engaging in $\laa$ $\varphi$ results. It is more intuitive when the implication is read as an ``only if". This axiom schema is clearly an idealization meant to contribute normative value to the logic rather than descriptive value. It can be interpreted as an assumption that the human agents being modeled do not engage in actions that they believe to be unsafe. For commercial pilots, this assumption is reasonably secure. For other domains, this assumption should be carefully noted and considered.
